--- a/public/style.css
+++ b/public/style.css
@@ -197,3 +197,16 @@ main .card .weight {
 #btnUnoMe {
     background: gray;
 }
+
+#options {
+    display: none;
+}
+
+#options {
+    background: white;
+    border: 2px solid black;
+    border-radius: 10px;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 10px;
+}
