--- a/public/style.css
+++ b/public/style.css
@@ -72,13 +72,14 @@ main .card:first-child {
 }
 
 main .status {
-    display: inline-block;
+    display: flex;
     background: white;
-    border: solid 2px black;
     border-radius: 10px;
     padding: 5px 20px;
     margin: 0 auto;
     margin-top: 10px;
+    text-align: center;
+    justify-content: center;
 }
 
 main #status {
@@ -95,8 +96,7 @@ main #status {
 }
 
 .grid-item {
-    background-color: rgba(255, 255, 255, 0.8);
-    padding: 20px;
+    background-color: rgb(184, 184, 184);
 }
 
 .player0 {
@@ -154,18 +154,14 @@ main #status {
 }
 
 .player {
-    width: 400px;
-    border-radius: 10px;
-    padding: 10px;
+    width: 100%;
     display: inline-block;
-    margin: 1%;
     vertical-align: top;
-    background: #d1d1d1;
 }
 
 .player.active {
-    border: solid 5px #222;
     background: #f5f5f5;
+    border: 4px solid black;
 }
 
 .points {
@@ -182,18 +178,6 @@ main #status {
     font-weight: bold;
     margin: 10px;
     float: left;
-}
-
-.draw {
-    float: left;
-    background: white;
-    color: #222;
-    padding: 10px;
-    border-radius: 10px;
-    border: double 5px;
-    width: 60px;
-    height: 100px;
-    font-size: 12pt;
 }
 
 .discard {
@@ -228,31 +212,6 @@ main .card .color {
     height: 100%;
     width: 100%;
     border-radius: 10px;
-}
-
-main .card .Blue {
-    background-color: blue;
-}
-
-main .card .Green {
-    background-color: green;
-}
-
-main .card .Red {
-    background-color: red;
-}
-
-main .card .Yellow {
-    background-color: goldenrod;
-}
-
-main .card .Black {
-    background-color: black;
-}
-
-main .card .weight {
-    font-size: 15pt;
-    font-family: sans-serif;
 }
 
 #color-buttons {
