Added an event log

--- a/public/style.css
+++ b/public/style.css
@@ -3,11 +3,18 @@
     --card-height: 165px;
 }
 
+.game-content {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+}
+
 body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
     background-color: #00897B;
+    display: flex;
 }
 
 main {
@@ -16,6 +23,7 @@ main {
     min-height: 350px;
     font-family: sans-serif;
     padding: 20px;
+    flex: 1;
 }
 
 .btn, .game-btn {
@@ -287,4 +295,47 @@ hr {
     border: 1px solid gray;
     margin: 10px 0;
     width: 100%;
+}
+
+.side-panel {
+    width: 250px;
+    height: 100%;
+    background-color: #f0f0f0;
+    box-shadow: -2px 0 5px rgba(0, 0, 0, 0.2);
+    overflow-y: auto;
+    overflow-x: hidden;
+    font-size: 14px;
+    min-height: 100vh;
+    transition: width 0.3s;
+    display: flex;
+}
+
+.side-panel.collapsed {
+    width: 33px;
+}
+
+.side-panel.collapsed .collapse-button {
+    transform: rotate(180deg);
+}
+
+.side-panel.collapsed .message {
+    display: none;
+}
+
+.collapse-button {
+    background-color: #f0f0f0;
+    border: none;
+    padding: 5px 10px;
+    font-size: 14px;
+    cursor: pointer;
+    transition: transform 0.3s;
+}
+
+.message {
+    padding: 10px;
+    border-bottom: 1px solid #ccc;
+}
+
+#message-container { 
+    border-left: 1px solid #ccc;
 }
