--- a/public/style.css
+++ b/public/style.css
@@ -310,15 +310,15 @@ hr {
 
 .side-panel {
     width: 250px;
-    height: 100%;
     background-color: #f0f0f0;
     box-shadow: -2px 0 5px rgba(0, 0, 0, 0.2);
     overflow-y: auto;
     overflow-x: hidden;
     font-size: 14px;
-    min-height: 100vh;
     transition: width 0.3s;
     display: flex;
+    height: 100vh;
+    overflow-y: hidden;
 }
 
 .side-panel.collapsed {
@@ -347,8 +347,19 @@ hr {
     border-bottom: 1px solid #ccc;
 }
 
+.message:nth-child(odd) {
+    background-color: #f5f5f5;
+}
+
+.message:nth-child(even) {
+    background-color: #fafafa;
+}
+
 #message-container { 
     border-left: 1px solid #ccc;
+    overflow-y: auto;
+    flex: 1;
+    background-color: #fafafa;
 }
 
 main .card.unplayable {
