--- a/public/style.css
+++ b/public/style.css
@@ -406,3 +406,20 @@ main .card.unplayable:hover {
     margin-right: 3px;
     margin-top: -4px;
 }
+
+#waitingOverlay {
+    display: none;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.7);
+    color: white;
+    font-size: 2rem;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    z-index: 1000;
+    pointer-events: none;
+}
